--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/macromania/lambda-result#readme",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83",
+    "prettier": "^2.4.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.4.3"
   }
 }
