--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API Gateway Proxy Result Wrapper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json"
@@ -19,11 +19,16 @@
   "bugs": {
     "url": "https://github.com/macromania/lambda-result/issues"
   },
-  "files": ["lib/**/*"],
+  "files": [
+    "lib/**/*"
+  ],
   "homepage": "https://github.com/macromania/lambda-result#readme",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83",
+    "@types/jest": "^27.0.2",
+    "jest": "^27.2.4",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.4.3"
